k8s/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-app-canary
  namespace: default
spec:
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 3000
